--- a/clean.html
+++ b/clean.html
@@ -4,51 +4,62 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Offshore Office 365</title>
-		<link href="styles/fonts.css" rel="stylesheet">
-		<link href="styles/bootstrap.min.css" rel="stylesheet">
-		<link href="styles/bootstrap-child.css" rel="stylesheet">
-		<link href="styles/stylesheet.css" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
+		<title>Offshore Office 360</title>
+		<link rel="stylesheet" href="styles/bootstrap.min.css">
+		<link rel="stylesheet" href="styles/bootstrap-multiselect.css">
+		<link rel="stylesheet" href="styles/bootstrap-child.css">
+		<link rel="stylesheet" href="styles/fontawesome-all.css">
+		<link rel="stylesheet" href="styles/stylesheet.css">
+        <link rel="stylesheet" href="styles/responsive.css">
+        <link rel="stylesheet" href="styles/prettify.min.css">
+        <link rel="stylesheet" href="styles/choices.min.css">
+        <script src="scripts/choices.min.js"></script>
 	</head>
 
-	<body>
+	<body data-spy="scroll" data-target="#nav_menu">
 		<!-- .fold-contact -->
-		<div id="contact" class="fold fold-contact">
+		<div id="contact" class="fold fold-contact decor decor-1">
 			<!-- .container -->
 			<div class="container">
 				<!-- .row -->
-				<div class="row justify-content-center">
+				<div class="row justify-content-center mb-5">
 					<!--  -->
-					<div class="col-md-6">
-						<!-- -->
-						<form>
+					<div class="col-md-5 text-center sr-down">
+						<h5 class="fc-violet">Contact Us</h5>
+						<h3>Start Building Your Team</h3>
+						<p>We’re sure you have a lot of questions. We’ll walk you through our process and how you can start building your offshore team.</p>
+					</div>
+					<!-- / -->
+				</div>
+				<!-- / -->
+
+				<!-- -->
+				<form>
+					<!-- .row -->
+					<div class="row justify-content-center">
+						<!--  -->
+						<div class="col-md-5 sr-right">
+							<!-- -->
+							<div class="row">
+								<!-- -->
+								<div class="col-md-6">
+									<input class="form-control" type="text" placeholder="Your Full Name" />
+								</div>
+								<!-- / -->
+
+								<!-- -->
+								<div class="col-md-6">
+									<input class="form-control" type="text" placeholder="Your Company Name" />
+								</div>
+								<!-- / -->
+							</div>
+							<!-- / -->
 
 							<!-- -->
 							<div class="row">
 								<!-- -->
 								<div class="col-md-6">
-									<div class="container">
-										<div class="row">
-											<div class="col-sm-6">
-												<div class="form-group">
-													<div class="input-group date" id="datetimepicker3" data-target-input="nearest">
-														<input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker3"/>
-														<div class="input-group-append" data-target="#datetimepicker3" data-toggle="datetimepicker">
-															<div class="input-group-text"><i class="fa fa-clock-o"></i></div>
-														</div>
-													</div>
-												</div>
-											</div>
-											<script type="text/javascript">
-												$(function () {
-													$('#datetimepicker3').datetimepicker({
-														format: 'LT'
-													});
-												});
-											</script>
-										</div>
-									</div>
+									<input class="form-control" type="email" placeholder="Email Address" />
 								</div>
 								<!-- / -->
 
@@ -59,20 +70,156 @@
 								<!-- / -->
 							</div>
 							<!-- / -->
-						</form>
+
+							<!-- -->
+							<div class="row">
+								<!-- -->
+								<div class="col-md-12">
+									<input class="form-control" type="text" placeholder="Company Address" />
+								</div>
+								<!-- / -->
+							</div>
+							<!-- / -->
+
+							<!-- -->
+							<div class="row">
+								<!-- -->
+								<div class="col-md-12">
+									<input class="form-control" type="text" placeholder="What company are you related to?" />
+								</div>
+								<!-- / -->
+							</div>
+							<!-- / -->
+						</div>
+						<!-- / -->
+
+						<!--  -->
+						<div class="col-md-5 sr-left">
+							<!-- -->
+							<div class="row">
+								<!-- -->
+								<div class="col-md-12">
+									<!-- -->
+									<div class="dropdown">
+										<button class="btn dropdown-toggle" type="button" id="what_services" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											What services would you like to inquire about
+										</button>
+
+										<!-- .dropdown-menu -->
+										<div class="dropdown-menu" aria-labelledby="what_services">
+											<a class="dropdown-item" href="#">Virtual Assistant</a>
+											<a class="dropdown-item" href="#">Tech Support Voice</a>
+											<a class="dropdown-item" href="#">Teach Support Non-voice</a>
+											<div class="dropdown-divider"></div>
+											<p>Digital Marketing</p>
+											<a class="dropdown-item" href="#">Web Design, development, and maintenance</a>
+											<a class="dropdown-item" href="#">Social Media Marketing</a>
+											<div class="dropdown-divider"></div>
+											<a class="dropdown-item" href="#">Transcriptionists</a>
+											<a class="dropdown-item" href="#">Others</a>
+										</div>
+										<!-- /.dropdown-menu -->
+									</div>
+									<!-- / -->
+								</div>
+								<!-- / -->
+							</div>
+							<!-- / -->
+
+							<!-- -->
+							<div class="row">
+								<!-- -->
+								<div class="col-md-12">
+									<input class="form-control" type="text" placeholder="Others: Please specify" />
+								</div>
+								<!-- / -->
+							</div>
+							<!-- / -->
+
+							<!-- -->
+							<div class="row">
+								<!-- -->
+								<div class="col-md-12">
+									<!-- -->
+									<div class="dropdown">
+										<button class="btn dropdown-toggle" type="button" id="how_many" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+											How many people are you looking to hire?
+										</button>
+
+										<!-- .dropdown-menu -->
+										<div class="dropdown-menu" aria-labelledby="how_many">
+											<a class="dropdown-item" href="#">Only 1</a>
+											<a class="dropdown-item" href="#">2-5</a>
+											<a class="dropdown-item" href="#">5-10</a>
+											<a class="dropdown-item" href="#">10-50</a>
+											<a class="dropdown-item" href="#">50-100</a>
+											<a class="dropdown-item" href="#">I don’t know yet</a>
+										</div>
+										<!-- /.dropdown-menu -->
+									</div>
+									<!-- / -->
+								</div>
+								<!-- / -->
+							</div>
+							<!-- / -->
+
+							<!-- -->
+							<div class="row">
+								<!-- -->
+								<div class="col-md-12">
+                                    
+                                    <select id="choices-multiple-remove-button" placeholder="Select upto 5 tags" multiple>
+                                        <option value="HTML">HTML</option>
+                                        <option value="Jquery">Jquery</option>
+                                        <option value="CSS">CSS</option>
+                                        <option value="Bootstrap 3">Bootstrap 3</option>
+                                        <option value="Bootstrap 4">Bootstrap 4</option>
+                                        <option value="Java">Java</option>
+                                        <option value="Javascript">Javascript</option>
+                                        <option value="Angular">Angular</option>
+                                        <option value="Python">Python</option>
+                                        <option value="Hybris">Hybris</option>
+                                        <option value="SQL">SQL</option>
+                                        <option value="NOSQL">NOSQL</option>
+                                        <option value="NodeJS">NodeJS</option>
+                                    </select>
+								</div>
+								<!-- / -->
+							</div>
+							<!-- / -->
+						</div>
+						<!-- / -->
+					</div>
+					<!-- /.row -->
+
+					<!-- -->
+					<div class="row justify-content-center">
+						<!-- -->
+						<div class="col-md-10 sr-right">
+							<button class="btn btn-secondary" data-toggle="modal" data-target="#modal_thankyou" type="button">Submit</button>
+						</div>
 						<!-- / -->
 					</div>
 					<!-- / -->
-				</div>
-				<!-- /.row -->
+				</form>
+				<!-- / -->
 			</div>
 			<!-- /.container -->
 		</div>
 		<!-- /.fold-clients -->
 		
-		<script src="scripts/jquery.min.js"></script>
-		<script type="text/javascript" src="scripts/moment.min.js"></script>
+        <script src="scripts/jquery.min.js"></script>
+        <script src="scripts/require-2.3.5.min.js"></script>
 		<script src="scripts/bootstrap.min.js"></script> 
-		<script type="text/javascript" src="scripts/bootstrap-tempusdominus.min.js"></script>
+		<script type="text/javascript">
+            $(document).ready(function(){
+                var multipleCancelButton = new Choices('#choices-multiple-remove-button', {
+                    removeItemButton: true,
+                    maxItemCount:5,
+                    searchResultLimit:5,
+                    renderChoiceLimit:5
+                });
+            });
+		</script>
 	</body>
 </html>
