--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Offshore Office 360</title>
-		<link rel="stylesheet" href="styles/fonts.css">
-		<link rel="stylesheet" href="styles/bootstrap.min.css">
-		<link rel="stylesheet" href="styles/bootstrap-tempusdominus.min.css">
-		<link rel="stylesheet" href="styles/bootstrap-child.css">
-		<link rel="stylesheet" href="styles/fontawesome-all.css">
-		<link rel="stylesheet" href="styles/stylesheet.css">
-		<link rel="stylesheet" href="styles/slick.css">
-		<link rel="stylesheet" href="styles/menufullpage.css">
-		<link rel="stylesheet" href="styles/customscrollbar.css">
-		<link rel="stylesheet" href="styles/responsive.css">
+		<link href="styles/fonts.css" rel="stylesheet">
+		<link href="styles/bootstrap.min.css" rel="stylesheet">
+		<link href="styles/bootstrap-tempusdominus.min.css" rel="stylesheet">
+		<link href="styles/bootstrap-child.css" rel="stylesheet">
+		<link href="styles/fontawesome-all.css" rel="stylesheet">
+		<link href="styles/stylesheet.css" rel="stylesheet">
+		<link href="styles/slick.css" rel="stylesheet">
+		<link href="styles/menufullpage.css" rel="stylesheet">
+		<link href="styles/customscrollbar.css" rel="stylesheet">
+		<link href="styles/responsive.css" rel="stylesheet">
 	</head>
 
 	<body data-spy="scroll" data-target="#nav_menu">
