--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link href="styles/fontawesome-all.css" rel="stylesheet">
 		<link href="styles/stylesheet.css" rel="stylesheet">
 		<link href="styles/slick.css" rel="stylesheet">
-		<!--link href="styles/menufullpage.css" rel="stylesheet"-->
+		<link href="styles/menufullpage.css" rel="stylesheet">
 		<link href="styles/customscrollbar.css" rel="stylesheet">
 		<link href="styles/responsive.css" rel="stylesheet">
 		<link href="styles/choices.css" rel="stylesheet">
@@ -1571,7 +1571,7 @@
 		<script src="scripts/bootstrap.min.js"></script> 
 		<script src="scripts/bootstrap-tempusdominus.min.js"></script>
 		<script src="scripts/slick.js"></script>
-		<!--script src="scripts/menufullpage.min.js"></script-->
+		<script src="scripts/menufullpage.min.js"></script>
 		<script src="scripts/scrollreveal.js"></script>
 		<script src="scripts/smooth-scroll.js"></script>
 		<script src="scripts/scripts.js"></script>
