--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,7 @@
 		<script src="scripts/bootstrap.min.js"></script> 
 		<script src="scripts/bootstrap-tempusdominus.min.js"></script>
 		<script src="scripts/slick.js"></script>
-		<script src="scripts/menufullpage.min.js"></script>
+		<script src="scripts/menuFullpage.min.js"></script>
 		<script src="scripts/scrollreveal.js"></script>
 		<script src="scripts/smooth-scroll.js"></script>
 		<script src="scripts/scripts.js"></script>
