--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<!-- -->
 					<div class="col-md-5 sr-right">
 						<h1>Building your offshore team has never been easier.</h1>
-						<h4 class="mb-3">We’re here to help grow your business. No need to worry about facilities, recruitment, payroll, and operations. We’ve got you covered.</h4>
+						<h4 class="mb-5">We’re here to help grow your business. No need to worry about facilities, recruitment, payroll, and operations.</h4>
 						<a href="#contact" class="btn btn-secondary btn-lg">Get Started</a>
 					</div>
 					<!--/ -->
