--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<div class="row">
 					<!-- -->
 					<div class="col-md-5 sr-right">
-						<h1>Building your offshore team has never been easier.</h1>
+						<h1 class="fc-yellow">Building your offshore team has never been easier.</h1>
 						<h4 class="mb-5">We’re here to help grow your business. No need to worry about facilities, recruitment, payroll, and operations.</h4>
 						<a href="#contact" class="btn btn-secondary btn-lg">Get Started</a>
 					</div>
